--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,8 +11,8 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1==0.4.8  # Keep this version
+pyasn1-modules==0.2.8
 pydantic==2.11.2
 pydantic_core==2.33.1
 requests==2.32.3
@@ -25,3 +25,5 @@ urllib3==2.3.0
 uvicorn==0.34.0
 websockets==15.0.1
 pymongo==4.5.0
+python-jose==3.4.0
+ecdsa==0.19.1
