--- a/package.json
+++ b/package.json
@@ -21,15 +21,10 @@
     "bootstrap": "^5.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "react-router-dom": "^7.5.0"
   },
   "scripts": {
     "dev": "vite"
-  }
-}
-
-{
-  "dependencies": {
-    "react-router-dom": "^7.5.0"
   }
 }
