--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "axois": "^0.0.1-security",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "react": "^19.0.0",
